# bl1nk-doc-mcp

./: .editorconfig  .gitattributes  .gitignore  BLUEPRINT.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  __init__.py  package.json  plugin.yaml  rust-toolchain.toml
.claude/: PROJECT_STATUS.md
.github/workflows/: auto-label.yml  ci.yml
.husky/: pre-commit
docs/: SPEC.md
docs/work/tasks/: TASK-001.json  TASK-001.md
scripts/: pre-commit  setup.sh
src/: config.rs  lib.rs  main.rs  server.rs
src/adapters/: command.rs  filesystem.rs  git.rs  mod.rs
src/domain/: evidence.rs  impact.rs  ledger.rs  metrics.rs  mod.rs  snapshot.rs  task.rs  validation.rs
src/prompts/: mod.rs
src/resources/: mod.rs
src/telemetry/: mod.rs
src/tools/: context_bundle.rs  impact.rs  ledger.rs  mod.rs  status.rs
tests/: repo_status_test.rs
tests/unit/: filesystem_test.rs  ledger_test.rs  mod.rs  task_test.rs
