[package]
name = "bl1nk-doc-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Minimal MCP server for task-scoped repository knowledge"
license = "MIT"

[dependencies]
pmcp = { version = "2", features = ["macros", "logging"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
insta = "1"
tokio-test = "0.4"
